# nota-derive

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
.beads/: config.yaml  metadata.json
src/: lib.rs  nexus_pattern.rs  nexus_verb.rs  nota_enum.rs  nota_record.rs  nota_transparent.rs  nota_try_transparent.rs  shared.rs
