[package]
name         = "nota-derive"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nota-derive"
description  = "Proc-macro derives for nota-codec — NotaRecord, NotaEnum, NotaTransparent, NexusPattern, NexusVerb. Re-exported through nota-codec; users only depend on nota-codec."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
